--- a/styles.css
+++ b/styles.css
@@ -5,22 +5,24 @@ body {
 	background-color: lightgoldenrodyellow;
 	background-image: url("images/Shenron.png");
 	background-attachment: fixed;
+	background-position: left;
 	background-position: top;
-	background-repeat: repeat-y;
+	background-size: cover;
+	background-repeat: no-repeat;
 	margin-top: 0px;
 	margin-right: 0px;
 	margin-bottom: 0px;
 	margin-left: 0px;
 	font-style: normal;
 	font-weight: 200;
+	float: center;
+	width: 100%;
 }
 /* Container */
 .container {
-	width: 90%;
+	width: 100%;
 	float: center;
 	align-content: center;
-	margin-left: auto;
-	margin-right: auto;
 	height: auto;
 }
 /* Navigation */
@@ -43,7 +45,7 @@ nav ul li {
 	float: left;
 	color: #FFFFFF;
 	font-size: 14px;
-	text-align: left;
+	text-align: center;
 	margin-right: 25px;
 	margin-left: 25px;
 	letter-spacing: 2px;
@@ -98,18 +100,11 @@ ul li:hover a {
 	margin-bottom: 0px;
 }
 .thumbnail {
+	display: inline-block;
 	text-align: center;
-	float: left;
-	justify-content: center;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-.gallery .thumbnail h4 {
-	margin-top: 5px;
-	margin-right: 5px;
-	margin-bottom: 5px;
-	margin-left: 5px;
-	color: #52BAD5;
+	float: none;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 .gallery .thumbnail p {
 	margin-top: 0px;
@@ -119,10 +114,12 @@ ul li:hover a {
 	color: black;
 }
 /* Banner Section */
+body div h1 {
+	display: inline-block;
+	float: center;
+}
 .banner {
 	padding-top: 30px;
-	padding-left: 15px;
-	padding-right: 15px;
 	padding-bottom: 100%;
 	text-align: left;
 }
@@ -164,20 +161,8 @@ nav ul li {
 	height: auto;
 	text-align: center;
 }
-.text_column {
-	width: 100%;
-	text-align: center;
-	padding-top: 0px;
-	padding-right: 0px;
-	padding-bottom: 0px;
-	padding-left: 0px;
-}
 .thumbnail {
-	width: 100%;
-}
-.tagline {
-	margin-top: 20px;
-	line-height: 22px;
+	width: auto;
 }
 .home_header {
 	padding-left: 10px;
@@ -234,9 +219,5 @@ nav ul li {
 .footer_column {
 	width: 100%;
 	margin-top: 0px;
-}
-.banner {
-	padding-left: 20px;
-	padding-right: 20px;
 }
 }
