--- a/styles3.css
+++ b/styles3.css
@@ -194,7 +194,7 @@ nav ul li {
 	color: #043745;
 }
 body {
-	background-image: url("images/Ae86.png");
+	background-image: url("images/spongebob_bg.png");
 }
 .container header nav {
 	margin-top: 0px;
