--- a/styles2.css
+++ b/styles2.css
@@ -2,7 +2,7 @@
 /* Body */
 body {
 	font-family: "Times New Roman", "serif";
-	background-color: navy;
+	background-color: #201c1c;
 	background-image: url("images/NGE.jpg");
 	background-attachment: fixed;
 	background-position: left;
