--- a/styles5.css
+++ b/styles5.css
@@ -37,7 +37,7 @@ body {
 header {
 	width: 100%;
 	height: auto;
-	background-color: #52bad5;
+	background-color: #005212;
 	border-bottom: 1px solid whitesmoke;
 }
 nav {
