--- a/styles5.css
+++ b/styles5.css
@@ -72,7 +72,7 @@ ul li:hover a {
 	background: #52bad5;
 }
 .container h2 {
-	color: whitesmoke;
+	color: yellow;
 }
 .home_header {
 	color: #FFFFFF;
@@ -114,7 +114,7 @@ ul li:hover a {
 	float: none;
 }
 .thumbnail h4 {
-	color: whitesmoke;
+	color: yellow;
 }
 .gallery .thumbnail p {
 	margin-top: 0px;
