--- a/styles6.css
+++ b/styles6.css
@@ -194,7 +194,7 @@ nav ul li {
 	color: #043745;
 }
 body {
-	background-image: url("images/NGE.jpg");
+	background-image: url("images/Shrek_-_uhd_1.png");
 }
 .container header nav {
 	margin-top: 0px;
