--- a/styles2.css
+++ b/styles2.css
@@ -148,7 +148,7 @@ body div h1 {
 @media (max-width: 320px) {
 .logo {
 	height: auto;
-	width: auto;
+	width: 100%;
 	text-align: center;
 }
 .container {
@@ -189,7 +189,7 @@ nav ul li {
 @media (min-width: 321px)and (max-width: 767px) {
 .logo {
 	height: auto;
-	width: auto;
+	width: 100%;
 	text-align: center;
 	color: #043745;
 }
@@ -212,7 +212,7 @@ header nav ul {
 	float: none;
 }
 .thumbnail iframe {
-	width: 720px;
+	width: 100%;
 	height: 480px;
 }
 
