--- a/styles7.css
+++ b/styles7.css
@@ -201,7 +201,7 @@ nav ul li {
 	color: #043745;
 }
 body {
-	background-image: url("images/Shrek_-_uhd_1.png");
+	background-image: url("images/newyork.png");
 }
 .container header nav {
 	margin-top: 0px;
