--- a/styles7.css
+++ b/styles7.css
@@ -18,6 +18,18 @@ body {
 	float: center;
 	width: 100%;
 }
+video { 
+    position: fixed;
+    top: 100%;
+    left: 100%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+ background: url('images/newyork.png') no-repeat;
+  background-size: cover;
+}
 /* Container */
 .container {
 	width: 100%;
@@ -238,12 +250,4 @@ nav ul li {
 	width: 100%;
 	margin-top: 0px;
 }
-}
-#myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  z-index:-999;
 }
