--- a/styles7.css
+++ b/styles7.css
@@ -10,6 +10,7 @@ body {
 	font-weight: 200;
 	float: center;
 	width: 100%;
+	z-index: 0;
 }
 video { 
   object-fit: cover;
@@ -18,6 +19,7 @@ video {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: -100;
 }
 /* Container */
 .container {
