--- a/styles7.css
+++ b/styles7.css
@@ -18,6 +18,22 @@ body {
 	float: center;
 	width: 100%;
 }
+.hero {
+	width: 100%;
+	height: 100vh;
+	background-image: url("images/newyork.png");
+	position: relative;
+	display: flex;
+	aligh-items: center;
+	justify-content: center;
+	
+}
+.back-video {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	z-index: -1;
+}
 /* Container */
 .container {
 	width: 100%;
