--- a/styles7.css
+++ b/styles7.css
@@ -19,7 +19,9 @@ body {
 	width: 100%;
 }
 .back-video {
-	position: absolute;
+	float: center;
+	width: auto;
+	height: 100%;
 	right: 0;
 	bottom: 0;
 	z-index: -1;
