--- a/styles7.css
+++ b/styles7.css
@@ -19,9 +19,9 @@ body {
 	width: 100%;
 }
 .back-video {
-	position: fixed;
+	position: sticky;
 	width: auto;
-	height: 100%;
+	height: 100vh;
 	right: 0;
 	bottom: 0;
 	z-index: -1;
