--- a/styles7.css
+++ b/styles7.css
@@ -80,7 +80,7 @@ ul li:hover a {
 	background: #52bad5;
 }
 .container h2 {
-	color: whitesmoke;
+	color: goldenrod;
 }
 .home_header {
 	color: #FFFFFF;
