--- a/styles8.css
+++ b/styles8.css
@@ -202,7 +202,7 @@ nav ul li {
 	color: #043745;
 }
 body {
-	background-image: url("images/newyork.png");
+	background-image: url("images/1205663.jpg");
 }
 .container header nav {
 	margin-top: 0px;
